# kernels_generator

./: .gitignore  CMakeLists.txt  README.md  Target.cpp  conanfile-build.txt  conanfile-dev.txt  conanfile-test-only.txt  conanfile-test.txt  conanfile.py  conanfile.txt  kernels_generator.cpp  rebuild.sh
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  bench_gnne_conv2d_1x1.cpp  bench_gnne_conv2d_3x3.cpp  bench_gnne_conv2d_5x5.cpp  bench_gnne_conv2d_7x7.cpp  bench_gnne_matmul.cpp
cmake/: codegen.cmake  findInstruction.cmake  hkgConfig.cmake.in  hkgHelper.cmake  utils.cmake
include/: halide_kernels.h  kernels_generator.h  nncase_kernels.h  prng.h  utils.h
include/benchmark/: bench_conv2d.h  bench_gnne_conv2d.h  bench_gnne_matmul.h
include/hkg/: halide_conv2d.h  kernels_generator.h  target.h
include/hkg/benchmark/: bench_conv2d.h  bench_conv2d_depthwise.h  bench_gnne_conv2d.h  bench_gnne_conv2d_depthwise.h  bench_gnne_matmul.h
include/hkg/export/: halide_conv2d.h  halide_conv2d.h.in  halide_conv2d_depthwise.h.in  halide_gnne_conv2d.h.in  halide_gnne_conv2d_depthwise.h.in  target.h
include/hkg/kernels/: halide_kernels.h  nncase_kernels.h
include/hkg/utils/: bfloat16.h  compilerdef.h  nncase.h  utils.h
src/: kernels_generator.cpp
src/benchmark/: CMakeLists.txt  bench_conv2d.cpp  bench_conv2d_depthwise.cpp  bench_gnne_conv2d_1x1.cpp  bench_gnne_conv2d_3x3.cpp  bench_gnne_conv2d_5x5.cpp  bench_gnne_conv2d_7x7.cpp  bench_gnne_matmul.cpp
src/tests/: CMakeLists.txt  test_feature.cpp  test_gen.cpp  test_gen_conv2d.cpp  test_gen_conv2d_depthwise.cpp  test_gen_gnne_conv2d.cpp  test_gen_gnne_conv2d_depthwise.cpp  test_ref.cpp
tests/: CMakeLists.txt  test_gen.cpp
